opam-version: "2.0"
version: "0.5"
maintainer: "stephen.dolan@cl.cam.ac.uk"
authors: ["Stephen Dolan"]
homepage: "https://github.com/stedolan/malfunction"
bug-reports: "https://github.com/stedolan/malfunction/issues"
dev-repo: "git+https://github.com/stedolan/malfunction.git"
license: "LGPL-2.0-or-later"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]
depends: [
  "ocaml" {>= "4.08" & < "5.0.0"}
  "ocamlfind"
  "dune"
  "cppo" {build}
  "omd" {with-test & >= "2.0.0~"}
  "zarith"
]
synopsis: "Compiler back-end for functional languages, based on OCaml"
description: """
Malfunction is a high-performance, low-level untyped program
representation, designed as a target for compilers of functional
programming languages."""
